--- a/src/main/webapp/resources/css/qna_view.css
+++ b/src/main/webapp/resources/css/qna_view.css
@@ -45,14 +45,16 @@ body {
 	justify-content:flex-start;
 	align-items: left;
 } */
-
 .qnaboardsl{
 	display: flex;
 	justify-content: flex-start;
 	width: 100%;
 	height: 100%;
 	text-align: left;
-	margin-bottom: 20px;
+	border: 2px solid #dee2e6;
+	flex-direction: column;
+	padding-right:10px;
+	padding-left: 10px;
 	padding-bottom: 20px;
 }
 
@@ -91,7 +93,6 @@ body {
 	align-items: center;
 	flex-direction: row;
 	margin-bottom: 10px;
-	padding-top: 15px;
 	
 }
 .id_input_box_b {
@@ -137,7 +138,6 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    border: 2px solid #dee2e6;
     padding-bottom: 10px;
     padding-right: 10px;
 }
@@ -272,4 +272,17 @@ body {
 }
 .linez{
 	border-bottom: 2px solid #dee2e6;
+}
+
+#contents{
+		border:0px solid black;
+		width:80%;
+		height: 100%;
+		word-wrap: break-word;
+		size: 100px;
+}
+
+.id_input_box textarea{
+	overflow:hidden;
+	border: 0px;
 }
