--- a/src/main/webapp/resources/css/admin_notice.css
+++ b/src/main/webapp/resources/css/admin_notice.css
@@ -51,10 +51,8 @@ form #store_not{
 }
 
 
-#write{
-	width: 100%;
-    height: 100%;
-    background: #7fad39;
+.btn .btn-primary .btn-xs .pull-right #myBtn{
+	background: #7fad39;
     border: 1px solid #7fad39;
     font-family: "Cairo", sans-serif;
     font-size: 15px;
@@ -63,6 +61,9 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
+}
+.linez{
+	border-bottom: 2px solid #dee2e6;
 }
 
 .btn{
@@ -77,36 +78,21 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-    margin-top: 0px;
+    margin-top: 30px;
 }
-
-.btn .btn-primary .btn-xs .pull-right #write{
-	background: #7fad39;
-    border: 1px solid #7fad39;
+#myBtn{
+		width: 100%;
+    height: 100%;
+    background: white;
+    border: 1px solid red;
     font-family: "Cairo", sans-serif;
     font-size: 15px;
     font-weight: bold;
     border-radius: 3px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: white;
+    color: red;
+    margin-top: 30px;
+	align: center;
 }
 
-.linez{
-	border-bottom: 2px solid #dee2e6;
-}
-
-.table .table-hover{
-	width: 100%;
-    margin-bottom: 1rem;
-    color: #212529;
-}
-
-.table .table-hover th,td{
-	text-align: center;
-	font-size: 16px;
-	
-}
-.table thead ,th{
-	padding: 0px;
-}
