--- a/src/main/webapp/resources/css/qna.css
+++ b/src/main/webapp/resources/css/qna.css
@@ -120,6 +120,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    font-size: 16px;
 }
 
 
@@ -406,5 +407,9 @@ align-item: center;
 }
 .table td, th {
 	text-align: center;
+	font-size: 16px;
 }
 
+.table .table-striped td{
+	font-size: 16px;
+}
