--- a/src/main/webapp/resources/css/shopgrid.css
+++ b/src/main/webapp/resources/css/shopgrid.css
@@ -1,35 +1,43 @@
 @charset "utf-8";
 
    /*조건필터*/
+   .shoplist {
+         background-color: rgb(127, 173, 57, 0.1);
+         
+   }
+   
+   .shoplisttwot #s_seoul{
+         padding-left:3px;
+   }
    .shoplistt{
-   display: flex;
-   justify-content: center;
-   width: 100%;
+      display: flex;
+      justify-content: center;
+      width: 100%;
    }
    .shoplis{
-    padding-top: auto;
-    padding-right: 15px;
-    padding-left: 15px;
+       padding-top: auto;
+       padding-right: 15px;
+       padding-left: 15px;
     
 }
    }
    .shoplist {
-   padding-top: 15px;
-   padding-right: 15px;
-   padding-left: 15px;
-   padding-bottom: 15px; 
-   background-color: #e0f6d2;
-   width: 100%;
+      padding-top: 15px;
+      padding-right: 15px;
+      padding-left: 15px;
+      padding-bottom: 15px; 
+      background-color: #e0f6d2;
+      width: 100%;
    }
    .shoplistone{
-   display: flex;
-   justify-content: center;
-   padding-top: 15px;
-   padding-bottom: 15px;
-   padding-right: 15px;
-   padding-left: 15px; 
-   font-size: 30px;
-   font-family: "Cairo", sans-serif;
+      display: flex;
+      justify-content: center;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      padding-right: 15px;
+      padding-left: 15px; 
+      font-size: 30px;
+      font-family: "Cairo", sans-serif;
    }
    .shoplistones{
    display: flex;
@@ -48,11 +56,11 @@
    padding-bottom: 10px;
    display: flex;
    justify-content: flex-start;
-   margin-left:100px;
+   margin:auto 100px;
    }
    .shoplisttwoo{
    padding-left:15px;
-   width:10%;
+   width:9.46%;
    display: flex;
    justify-content: flex-start;
    }
@@ -61,9 +69,9 @@
    }
    .shoplisttwot{
    padding-right:15px;
-   width:100%;
+   width:800px;
    display: flex;
-   justify-content: flex-start;
+   justify-content: space-around;
    list-style:none;
    }
    .shoplisttwot p{
@@ -95,6 +103,15 @@
    justify-content: flex-start;
    list-style:none;
    }
+   
+    .shoplisttht #cow{
+        margin-left:35px;
+   }
+   
+   .shoplisttht #pig_li{
+       margin-left : 77px;
+    }
+   
    .shoplisttht p{
    margin-right: 73px;
    margin-top: -5px;
@@ -144,26 +161,40 @@
    display: flex;
    justify-content: flex-start;
    }
-   .shopliststartwo{
+   
+   /*.shopliststartwo{
    width:100%;
+   margin-left:39px;
    display: flex;
    justify-content: flex-start;
+   }*/
+   
+   .shopliststartwo{
+   padding-right: 15px;
+    width: 800px;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
    }
+   
    .shopliststartwo p{
    margin-right: 57px;
    margin-top: -5px;
    }
+   
    .shopliststartwo li{
    list-style:none;
    font-family: "Cairo", sans-serif;
    /*soobin */
    margin-right: 3px;
    }
+   
    .shoplistb{
    padding-top: 10px;
    display:flex;
    justify-content: center;
    }
+   
    .shoplistbu{
    display:flex;
    justify-content: space-around;
@@ -171,19 +202,19 @@
    width: 40%;
    
    }
+   
    .shoplist_but{
    display: flex;
    border-radius:3px;
    }
+   
    .shoplistm{
    margin-top: 50px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    }
-   
-   }
-   
+  
    /*현재 페이지밑 패이지 이동부분*/
    .product__pagination_center{
    display: flex;
@@ -234,6 +265,18 @@
     width: 600px;
    text-align: left;
  }
- #pig_li{
- margin-left : 15px;
+ 
+ 
+ /*버튼*/
+ 
+ .shoplist_but .site-btn {
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: 800;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 13px 30px 12px;
+    background: #7fad39;
+    border-radius : 6px;
+    border: none;
  }
