--- a/src/main/webapp/resources/css/shopgrid.css
+++ b/src/main/webapp/resources/css/shopgrid.css
@@ -263,10 +263,106 @@
    }
  .shoping__cart__table table tbody tr td.shoping__cart__item{
     width: 600px;
+    height: 300px;
    text-align: left;
  }
  
+ /*do*/
+.col-lg-6 {
+   padding-left: 0px;
+   position: relative;
+    width: 100%;
+    padding-right: 15px;
+}
+
+.col-lg-6 .table {
+    width: 100%;
+    height: 201px;
+    text-align: center;
+    display: flex;
+    padding : 10px 20px;
+    margin: 10px 14px;
+    border: 1px solid;
+    
+ }
  
+.col-lg-box .table {
+    width: 100%;
+    height: 201px;
+    text-align: center;
+    display: flex;
+    padding : 10px 20px;
+    margin: 10px;
+    /*border: 1px solid #a6a6a6;*/
+    /*border: 1px solid rgb(85, 85, 85);*/  
+    /*background-color: rgb(127, 173, 57, 0.1);*/
+    background-color: rgb(245, 245, 245);
+ }
+ 
+.col-lg-box {
+   width: 555px;
+   display: flex;
+} 
+ 
+.table-le-top {
+   display: flex;
+   
+}
+
+.table-le {
+   width: 55%;
+}
+
+.table-le-name {
+   font-size: 23px;
+   font-family: "Cairo", sans-serif;
+   margin:2px;
+   margin-left: 35px;
+   text-align: start;
+   font-weight: bold;
+}
+
+.table-le-name a {
+   /*font-size: 16px;*/
+    color: #1c1c1c;
+    /*line-height: 39px;
+    display: block;*/
+}
+
+.avgStar {
+   font-size: 20px;
+   font-family: "Cairo", sans-serif;
+   margin: 7px;
+   margin-left: 18px;
+   text-align: start;
+   font-weight: bold;
+   align-items: center;
+   color: rgb(255, 0, 0, 0.8);
+   /*color: rgb(127, 173, 57);*/
+}
+
+.table-le-topbox {
+   display: flex;
+}
+
+.table-le-text {
+   font-size: 17px;
+   font-family: "Cairo", sans-serif;
+   margin: 7px;
+   margin-left: 35px;
+   text-align: start;
+}
+ 
+ .shoping__cart__table {
+    height: 300px;
+    margin-bottom: 30px;
+}
+ 
+.product {
+   padding-top: 80px;
+    padding-bottom: 45px;
+} 
+
  /*버튼*/
  
  .shoplist_but .site-btn {
