--- a/src/main/webapp/resources/css/storelist.css
+++ b/src/main/webapp/resources/css/storelist.css
@@ -280,3 +280,15 @@ article .block {padding: 20px; min-height: 200px;}
 article .block p {line-height: 22px; color: #fff; font-size: 16px; font-weight: 600;}
 article .block:nth-child(2n+1) {background: #999;}
 article .block:nth-child(2n) {background: #222;}
+
+.shoping__cart__table table tbody tr td {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ebebeb;
+}
+.shoping__cart__table table tbody tr td.shoping__cart__price {
+    font-size: 18px;
+    color: #1c1c1c;
+    font-weight: 700;
+    /* width: 100px;
+}
